--- a/src/components/styles/partials/_footer.scss
+++ b/src/components/styles/partials/_footer.scss
@@ -57,7 +57,7 @@
 
             @include tablet {
                 &:hover {
-                    color: $primary-color;
+                    color: $projects;
                 }
             }
         }
