--- a/src/components/styles/partials/_intro.scss
+++ b/src/components/styles/partials/_intro.scss
@@ -70,7 +70,7 @@
 
             @include tablet {
                 &:hover {
-                    color: $primary-color;
+                    color: $projects;
                 }
             }
         }
