--- a/src/components/styles/partials/_variables.scss
+++ b/src/components/styles/partials/_variables.scss
@@ -8,7 +8,7 @@ $small-desktop-width: 1280px;
 $large-desktop-width: 1920px;
 
 // Color palette
-$primary-color: #e087fb;
+$primary-color: #8B1874;
 $secondary-color: #217f04;
 $white: #ffffff;
 $light-bg: #f2f2f2;
@@ -17,6 +17,6 @@ $gray: #808080;
 $dark-gray: #595959;
 $black: #000000;
 $dark: #222222;
-$projects: #fbe087;
-$projects-light: #fef9e6;
+$projects: #AE5D9E;
+$projects-light: #DCBAD5;
 $box-shadow: rgba(0, 0, 0, 0.2);
