--- a/src/components/styles/partials/_global.scss
+++ b/src/components/styles/partials/_global.scss
@@ -48,18 +48,19 @@ ol {
     display: block;
     @extend .nav-mobile;
     @extend .box-shadow;
-    border: 4px solid $dark;
     padding: 12px 24px;
     text-align: center;
     transition: all .3s ease-in-out;
     margin-bottom: 24px;
-    color: $dark;
+    color: $white;
+    background-color: $projects;
+    border-radius: 8px;
 
     @include tablet {
         max-width: 250px;
 
         &:hover {
-            background-color: $projects;   
+            transform: scale(1.05);
         }
     }
 }
@@ -83,19 +84,17 @@ ol {
     background-color: $dark;
     color: $white;
     transition: all .3s ease-in-out;
+    @extend .box-shadow;
 
     &--active {
         @extend .chip-btn;
-        color: $dark;
         background-color: $projects;
     }
 
     @include tablet {
         &:hover {
-            box-shadow: 0px 4px 4px 2px $box-shadow;
             transform: scale(1.05);
             background-color: $projects;
-            color: $dark;
         }
     }
 }
