--- a/src/components/styles/partials/_projectDetails.scss
+++ b/src/components/styles/partials/_projectDetails.scss
@@ -40,6 +40,7 @@
     }
 
     &__title {
+        color: $white;
 
         @include tablet {
             font-size: 40px;
@@ -101,7 +102,6 @@
     &__img {
         width: 100%;
         height: auto;
-        // @extend .box-shadow;
 
         @include small-desktop {
             height: auto;
@@ -127,7 +127,7 @@
         padding: 12px 24px;
         text-align: center;
         transition: all .3s ease-in-out;
-        border: 4px solid $dark;
+        border-radius: 8px;
     
         @include tablet {
             max-width: 280px;
@@ -135,8 +135,7 @@
     
             &:hover {
                 background-color: $primary-color;
-                color: $dark;
-                border: 4px solid $primary-color;
+                transform: scale(1.05);
             }
         }
     }
